# de-zoomcamp-2025

./: .gitignore  README.md  pyproject.toml
analytics-engineering/taxi_rides_ny/models/core/: dim_fhv_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql
analytics-engineering/taxi_rides_ny/models/staging/: schema.yml  stg_fhv_tripdata.sql
homework/hw1/: README.md
homework/hw2/: README.md  postgres_taxi_parent_flow.yaml  postgres_taxi_subflow.yaml
homework/hw3/: README.md
homework/hw4/: README.md
my_docker_sql/: ingest_green_trip_data.ipynb  wk1_notes.txt
