[project]
name = "de-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pgcli>=4.1.0",
    "psycopg-binary>=3.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=18.1.0",
    "sqlalchemy>=2.0.37",
]
